Event not found error added, README updated

--- a/README
+++ b/README
@@ -1,9 +1,14 @@
-Болванка для будущего проекта
+Проект системы по продаже билетов на стадионе "Черноморец".
+Реализован 1 п. ТЗ - есть список событий с возможность добавления/удаления/редактирования событий.
 =====================================
 
 Ипользуем play 2.2.3, ссылка на скачивание:
 
 http://downloads.typesafe.com/play/2.2.3/play-2.2.3.zip
+
+Интерфейс основана на Twitter Bootstrap v.3.1.1:
+
+http://getbootstrap.com/
 
 Скачать Scala IDE на основе Ecipse можно отсюда:
 
