--- a/README
+++ b/README
@@ -1,5 +1,6 @@
 Проект системы по продаже билетов на стадионе "Черноморец".
-Реализован 1 п. ТЗ - есть список событий с возможность добавления/удаления/редактирования событий.
+Реализован п.2 ТЗ - Теперь в системе продажи билетов можно продавать билеты =)
+2 готово, 2 осталось!
 =====================================
 
 Ипользуем play 2.2.3, ссылка на скачивание:
