Now sales and bookings contains info about responsible user

--- a/README
+++ b/README
@@ -1,6 +1,5 @@
 Проект системы по продаже билетов на стадионе "Черноморец".
-Реализован п.2 ТЗ - Теперь в системе продажи билетов можно продавать билеты =)
-2 готово, 2 осталось!
+Реализован базовый фнукционал: учет событиый, продаж, бонирований+ авторизация. В настоящее время производится доработка напильником =)
 =====================================
 
 Ипользуем play 2.2.3, ссылка на скачивание:
